# HeiCut

./: .gitattributes  CMakeLists.txt  README.md  install_mtkahypar.sh
app/generators/: hypercactus_generator.cpp
examples/: hypercactus_example_input.hgr
experiments/: generate_experiments.sh
experiments/large_unweighted/: generate_experiments.sh
experiments/large_weighted/: generate_experiments.sh
experiments/medium_unweighted/: generate_experiments.sh
experiments/medium_weighted/: generate_experiments.sh
lib/coarsening/: label_propagation.h  pruner.h  strongly_connected_components.cpp  strongly_connected_components.h
lib/conversion/: hypergraph_converter.cpp  hypergraph_converter.h
lib/decomposition/: canonical_decomposition.cpp  canonical_decomposition.h
lib/io/: mt_kahypar_io.h
lib/orderer/: orderer.h
lib/parse_parameters/: parse_parameters.cpp  parse_parameters.h
lib/solvers/: kernelizer.cpp  kernelizer.h  submodular.cpp  submodular.h
lib/utils/: const.h  definitions.h  output.h
